# XObject

./: CMakeLists.txt  README.md
Test/: CMakeLists.txt
Test/LuaTest/: CMakeLists.txt  Test.h  main.cpp
Test/RttrTest/: CMakeLists.txt  Test.h  main.cpp
Test/RttrVSLua/: CMakeLists.txt  Test.h  Utils.h  main.cpp
Test/SerializationTest/: CMakeLists.txt  Test.h  main.cpp
XHT/: CMakeLists.txt
XHT/KeywordsGen/: CMakeLists.txt  KeywordsGen.cpp
XHT/Src/: CmdLine.h  DataDef.h  FileGenerator.cpp  FileGenerator.h  FileParser.cpp  FileParser.h  Keywords.inl  ParserBase.cpp  ParserBase.h  README.md  SymbolParser.cpp  SymbolParser.h  Symbols.h  Token.h  Utils.h  main.cpp
XObject/: CMakeLists.txt  XMetaObject.cpp  XMetaObject.h  XObject.cpp  XObject.h
XObject/Serialization/: SerializationBriefSyntax.h  SerializationDefine.h
XObject/Serialization/bitsery/: deserializer.h
XObject/Serialization/bitsery/details/: serialization_common.h
XObject/Serialization/nlohmann/: adl_serializer.hpp  json.hpp
